--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Drink Water</title>
+    <title>Drink Water @ mapleque.com</title>
     <link data-trunk rel="css" href="style.css" />
     <link data-trunk rel="copy-dir" href="public" />
   </head>
